[package]
name = "node"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = "1.0.147"
serde_json = { version = "1.0.82", features = ["unbounded_depth", "arbitrary_precision"] }
serde_with = { version = "3.6.1", features = ["time_0_3"] }
strum = "0.26.2"
strum_macros = "0.26.4"
derive_more = "0.99.17"
lazy_static = "1.4.0"
thiserror = "1.0.37"
time = { version = "0.3.36", features = ["parsing"] }
anyhow = "1.0.70"
num_enum = "0.5.7"
redux = { workspace = true }
multihash = { version = "0.18.1", features = ["blake2b"] }
mina-hasher = { workspace = true }
mina-signer = { workspace = true }
ledger = { workspace = true }
mina-p2p-messages = { workspace = true }
vrf = { workspace = true }

openmina-core = { path = "../core" }
snark = { path = "../snark" }
p2p = { path = "../p2p" }
openmina-node-account = { path = "./account" }
tokio = { version = "1.26.0" }
postcard = { version = "1.0.8", features = ["use-std"] }
static_assertions.workspace = true

[build-dependencies]
regex = "1"
rust-format = "0.3"
vergen = { version = "8.2.4", features = ["build", "cargo", "git", "gitcl", "rustc"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
linkme = { workspace = true }
redux = { workspace = true, features=["serializable_callbacks"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"

[features]
replay = []
p2p-webrtc = ["p2p/p2p-webrtc"]
p2p-libp2p = ["p2p/p2p-libp2p"]
fuzzing = ["p2p/fuzzing"]
