[package]
name = "p2p"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
thiserror = "1.0.37"
serde = "1.0.147"
serde_json = "1.0.94"
strum = "0.24.1"
strum_macros = "0.24.3"
derive_more = "0.99.17"
rand = "0.8"
bytes = "*"
bs58 = "0.4.0"
anyhow = "1.0.70"
smallvec = "1.10.0"
cfg-if = "1.0.0"
url = "2.3.1"
multihash = "0.18.1"
sha2 = "0.10.6"
ecies-ed25519 = "0.5.1"
ed25519-dalek = { version = "2.0.0-rc.2", features = ["serde"] }

redux = { git = "https://github.com/openmina/redux-rs.git", features = ["serde"] }
mina-p2p-messages = { workspace = true }

openmina-core = { path = "../core" }
snark = { path = "../snark" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.26", features = ["rt"] }
webrtc = { git = "https://github.com/openmina/webrtc.git", branch = "openmina-dd340dd" }
hyper = { version = "0.14.25", features = ["client", "http1", "tcp"] }
libp2p = { git = "https://github.com/openmina/rust-libp2p", branch="webrtc-v0.51.3", default-features = false, features = ["macros", "serde", "tcp", "dns", "tokio", "yamux", "pnet", "noise", "gossipsub"] }
libp2p-rpc-behaviour = { path = "libp2p-rpc-behaviour" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.37"
gloo-utils = "0.2"
js-sys = "0.3.64"
web-sys = { version = "0.3", features = ["RtcPeerConnection", "RtcConfiguration", "RtcIceTransportPolicy", "RtcDataChannel", "RtcDataChannelInit", "RtcSessionDescription", "RtcSessionDescriptionInit", "RtcSdpType", "RtcPeerConnectionState", "RtcIceGatheringState", "Window", "Request", "RequestInit", "Headers", "Response"] }
tokio = { version = "1.26", features = ["macros"] }
