[package]
name = "p2p"
version = "0.8.3"
edition = "2021"
license = "Apache-2.0"

[dependencies]
thiserror = "1.0.37"
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = "0.26"
strum_macros = "0.26"
derive_more = "0.99.17"
rand = { version = "0.8", features = [ "small_rng" ] }
bytes = "*"
bs58 = "0.4.0"
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "2b5a909" }
binprot_derive = { git = "https://github.com/openmina/binprot-rs", rev = "2b5a909" }
anyhow = "1.0.70"
smallvec = "1.10.0"
cfg-if = "1.0.0"
url = "2.3.1"
multihash = "0.18.1"
sha2 = "0.10.6"
# ecies-ed25519 = "0.5.1"
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
faster-stun = { version = "1.0.1", optional = true }
reqwest = { version = "0.11.22", optional = true }
unsigned-varint = { version = "0.8.0" }
hex = { version = "0.4.3" }
bitflags = { version = "2.4.1", features = ["serde"] }
# crypto
zeroize = { version = "1.7" }
hkdf = { version = "0.12.4" }
blake2 = { version = "0.10.6" }
chacha20poly1305 = { version = "0.10.1" }
curve25519-dalek = { version = "4.1", features = ["legacy_compatibility"] }
libp2p-identity = { version = "=0.2.7", features = ["ed25519", "rand", "serde"] }
multiaddr = { version = "0.18.1" }

redux = { workspace = true }
mina-p2p-messages = { workspace = true }

salsa-simple = { path = "../tools/salsa-simple" }
openmina-core = { path = "../core" }
openmina-macros = { path = "../macros" }
quick-protobuf = "0.8.1"
crypto-bigint = { version = "0.5.5", features = ["generic-array", "serde", "alloc"] }

prost = { version = "0.12.4" }

openmina-fuzzer = { path = "../fuzzer", optional = true }

[build-dependencies]
prost-build = { version = "0.12.4" }

[dev-dependencies]
crypto-bigint = { version = "0.5.5", features = ["rand_core"] }
warp = "0.3.6"
tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.2", features = ["derive", "env"] }
p2p-testing = { path = "testing" }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
redux = { workspace = true, features=["serializable_callbacks"] }
tokio = { version = "1.26", features = ["rt"] }
webrtc = { git = "https://github.com/openmina/webrtc.git", branch = "openmina-v0.11.0", optional = true }
hyper = { version = "0.14.25", features = ["client", "http1", "tcp"] }
mio = { version = "0.8.11", features = ["os-poll"] }
libc = { version = "0.2.151" }
local-ip-address = "0.6.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-utils = "0.2"
js-sys = "0.3.64"
web-sys = { version = "0.3", features = ["MessageEvent", "RtcPeerConnection", "RtcConfiguration", "RtcIceTransportPolicy", "RtcDataChannel", "RtcDataChannelInit", "RtcSessionDescription", "RtcSessionDescriptionInit", "RtcSdpType", "RtcPeerConnectionState", "RtcIceGatheringState", "Window", "Request", "RequestInit", "Headers", "Response"] }
tokio = { version = "1.26", features = ["macros"] }
getrandom = { version = "0.2", features = ["js"] }

[features]
p2p-webrtc = ["webrtc"]
p2p-libp2p = ["fuzzing", "dep:reqwest", "dep:faster-stun"]
fuzzing = ["openmina-fuzzer", "openmina-core/fuzzing"]
