[package]
name = "openmina-producer-dashboard"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "openmina-producer-dashboard"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
graphql_client = { version = "0.14", features = ["reqwest"]}
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
num-bigint = "0.4"
thiserror = "1.0.44"
num-traits = "0.2"
serde_json = { version = "1.0.83" }
vrf = { workspace = true }
openmina-node-account = { path = "../node/account" }
mina-p2p-messages = { workspace = true }
time = {version = "0.3", features = ["formatting", "parsing"]}
clap = { version = "4.5", features = ["derive"]}
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "json"] }
dotenvy = "0.15"
sled = "0.34"
bincode = "1.3.3"
