[package]
name = "snark"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
mina-hasher = { git = "https://github.com/o1-labs/proof-systems" }
mina-signer = { git = "https://github.com/o1-labs/proof-systems" }
mina-curves = { git = "https://github.com/o1-labs/proof-systems" }
o1-utils = { git = "https://github.com/o1-labs/proof-systems" }
kimchi = { git = "https://github.com/o1-labs/proof-systems" }
poly-commitment = { git = "https://github.com/o1-labs/proof-systems" }
mina-poseidon = { git = "https://github.com/o1-labs/proof-systems" }

strum_macros = "0.24.3"
derive_more = "0.99.17"
serde = { version = "1.0", features = ["rc"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
ark-ff = { git = "https://github.com/openmina/algebra", branch = "openmina", features = [ "parallel", "asm" ] }
ark-ec = { git = "https://github.com/openmina/algebra", branch = "openmina", features = [ "parallel" ] }
ark-poly = { git = "https://github.com/openmina/algebra", branch = "openmina", features = [ "parallel" ] }
once_cell = "1.10"
hex = "0.4"
redux = { git = "https://github.com/openmina/redux-rs.git", features = ["serde"] }
ledger = { workspace = true }
mina-p2p-messages = { workspace = true }
sha2 = "0.10"
num-bigint = "0.4"
bincode = "1.3.3"

rand = "0.8"
rayon = "1.5"

openmina-core = { path = "../core" }

[dev-dependencies]

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3.0"
