[package]
name = "snark"
version = "0.10.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
mina-hasher = { workspace = true }
mina-signer = { workspace = true }
mina-curves = { workspace = true }
o1-utils = { workspace = true }
kimchi = { workspace = true }
mina-poseidon = { workspace = true }
poly-commitment = { workspace = true }

strum_macros = "0.26"
derive_more = "0.99.17"
serde = { version = "1.0", features = ["rc"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
ark-ff = { version = "0.3.0", features = [ "parallel", "asm", "std" ] }
ark-ec = { version = "0.3.0", features = [ "std" ] }
ark-poly = { version = "0.3.0", features = [ "std" ] }
once_cell = "1"
hex = "0.4"
redux = { workspace = true }
ledger = { workspace = true }
mina-p2p-messages = { workspace = true }
sha2 = "0.10"
num-bigint = "0.4"
thiserror = "1.0.50"
rand = "0.8"
rayon = "1.5"

openmina-core = { path = "../core" }

[dev-dependencies]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
linkme = { workspace = true }
redux = { workspace = true, features=["serializable_callbacks"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3.0"
