[package]
name = "snarker"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = "1.0.147"
serde_json = { version = "1.0.82", features = ["unbounded_depth", "arbitrary_precision"] }
strum = "0.24.1"
strum_macros = "0.24.3"
derive_more = "0.99.17"
thiserror = "1.0.37"
anyhow = "1.0.70"
num_enum = "0.5.7"
bs58 = "0.4.0"
redux = { git = "https://github.com/openmina/redux-rs.git", features = ["serde"] }
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "ead5ba916725abf8ab212b89985b47c79d1a006a" }
binprot_derive = { git = "https://github.com/openmina/binprot-rs", rev = "ead5ba916725abf8ab212b89985b47c79d1a006a" }
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", branch = "new-types-feb-23", features = ["hashing"] }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems" }
mina-signer = { git = "https://github.com/o1-labs/proof-systems" }

shared = { path = "../node/shared" }
p2p = { path = "../p2p" }

[build-dependencies]
regex = "1"
