[package]
name = "snarker"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = "1.0.147"
serde_json = { version = "1.0.82", features = ["unbounded_depth", "arbitrary_precision"] }
strum = "0.24.1"
strum_macros = "0.24.3"
derive_more = "0.99.17"
lazy_static = "1.4.0"
thiserror = "1.0.37"
anyhow = "1.0.70"
num_enum = "0.5.7"
bs58 = "0.4.0"
redux = { git = "https://github.com/openmina/redux-rs.git", features = ["serde"] }
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "dfbd3bbda8b2681d86ac73065523c658ee31d45d" }
binprot_derive = { git = "https://github.com/openmina/binprot-rs", rev = "dfbd3bbda8b2681d86ac73065523c658ee31d45d" }
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", features = ["hashing"], rev = "212c12400010cbe4694617c133d2f6de0afa48fa" }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems" }
mina-signer = { git = "https://github.com/o1-labs/proof-systems" }
ledger = { package = "mina-tree", git = "https://github.com/openmina/ledger", rev = "a14554563c886d00ac6a26bb1e05dfdd41a57c32" }

shared = { path = "../node/shared" }
snark = { path = "../node/snark" }
p2p = { path = "../p2p" }

[build-dependencies]
regex = "1"
rust-format = "0.3"
