[package]
name = "replay_dynamic_effects"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]
name = "replay_dynamic_effects"

[dependencies]
openmina-core = { path = "../../core" }
node = { path = "../../node", features = ["replay"] }
openmina-node-native = { path = "../../node/native" }
cli = { path = "../" }
