[package]
name = "replay_dynamic_effects"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["dylib"]
name = "replay_dynamic_effects"

[dependencies]
node = { path = "../../node", features = ["replay"] }
openmina-node-native = { path = "../../node/native" }
openmina-node-invariants = { path = "../../node/invariants" }
cli = { path = "../" }
