[package]
name = "openmina-node-account"
version = "0.8.2"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = "1.0.147"
serde_json = { version = "1.0.82", features = ["unbounded_depth", "arbitrary_precision"] }
thiserror = "1.0.37"
anyhow = "1.0.70"
bs58 = "0.4.0"
hex = "0.4.3"
rand = "0.8"
lazy_static = "1.4.0"
argon2 = { version = "0.5.3", features = ["std"] }
crypto_secretbox = { version = "0.1.1", features = ["std"] }
base64 = "0.22"
mina-p2p-messages = { workspace = true }
mina-hasher = { workspace = true }
mina-signer = { workspace = true }
openmina-core = { path = "../../core" }
