[package]
name = "openmina-node-common"
version = "0.10.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
rand = "0.8"
thiserror = "1.0.44"
serde = "1.0.158"
serde_json = "1.0.94"
tracing = "0.1.37"
rayon = "1.5"
jsonpath-rust = "0.5.0"
tokio = { version = "1.26.0", features = ["time"] }
mina-p2p-messages = { workspace = true }
mina-signer = { workspace = true }
vrf = { workspace = true }
ledger = { workspace = true }
sha3 = "0.10.8"
ark-ff = { version = "0.3.0", features = [ "parallel", "asm", "std" ] }

node = { path = "../../node", features = ["replay"] }
openmina-core = { path = "../../core" }

[target.'cfg(target_family = "wasm")'.dependencies]
redux = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-utils = "0.2"
tracing-wasm = "0.2"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
redux = { workspace = true, features=["serializable_callbacks"] }
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
libp2p-identity = { version = "=0.2.7", features = ["ed25519", "rand", "serde"] }

[features]
p2p-webrtc = ["node/p2p-webrtc"]
p2p-libp2p = ["node/p2p-libp2p"]
