[package]
name = "lib"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = "1.0.147"
serde_json = { version = "1.0.82", features = ["unbounded_depth", "arbitrary_precision"] }
strum = "0.24.1"
strum_macros = "0.24.3"
derive_more = "0.99.17"
thiserror = "1.0.37"
num_enum = "0.5.7"
redux = { git = "https://github.com/openmina/redux-rs.git", features = ["serde"] }
libp2p = { git = "https://github.com/openmina/rust-libp2p", branch="webrtc-v0.51.3", default-features = false, features = ["wasm-bindgen", "wasm-ext-webrtc", "serde"] }
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", branch = "openmina", features = ["hashing"] }

shared = { path = "../shared" }
node-p2p = { path = "../p2p" }
snark = { path = "../snark" }

[build-dependencies]
regex = "1"
