[package]
name = "lib"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = "1.0.147"
serde_json = { version = "1.0.82", features = ["unbounded_depth", "arbitrary_precision"] }
strum = "0.24.1"
strum_macros = "0.24.3"
derive_more = "0.99.17"
thiserror = "1.0.37"
redux = { git = "https://github.com/openmina/redux-rs.git", features = ["serde"] }
libp2p = { git = "https://github.com/openmina/rust-libp2p", branch="webrtc", features = ["wasm-bindgen", "wasm-ext-webrtc", "serde"] }
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", features = ["hashing"], rev = "e767b4def96d66c70da6f67504105aca2c45fae5" }
ledger = { package = "mina-tree", git = "https://github.com/openmina/ledger", rev = "72ed461722390117921492bc27cb923dfea1e2b7" }

shared = { path = "../shared" }
p2p = { path = "../p2p" }
snark = { path = "../snark" }
num_enum = "0.5.7"

[build-dependencies]
regex = "1"
