[package]
name = "openmina-node-native"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
rand = "0.8"
serde = "1.0.158"
serde_json = "1.0.94"
rayon = "1.5"
tokio = { version = "1.26.0", features = ["process", "macros"] }
warp = "0.3"
libp2p = { workspace = true, features = ["macros", "serde", "tcp", "dns", "tokio", "yamux", "pnet", "noise", "gossipsub"] }
juniper = { version = "0.15.11" }
juniper_warp = { version = "0.7.0" }
redux = { git = "https://github.com/openmina/redux-rs.git", branch="feat/global-time", features = ["serde"] }
ledger = { workspace = true }
mina-p2p-messages = { workspace = true }
mina-signer = { workspace = true }
bytes = "1.4.0"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
tracing = "0.1.37"
thiserror = "1.0.44"
nix = { version = "0.26.2", features = ["signal"] }
vrf = { workspace = true }

openmina-core = { path = "../../core" }
node = { path = "../../node", features = ["replay"] }

[features]
p2p-webrtc = ["node/p2p-webrtc"]
p2p-libp2p = ["node/p2p-libp2p"]
