[package]
name = "openmina-node-native"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
rand = "0.8"
serde = "1.0.158"
serde_json = "1.0.94"
derive_more = "0.99.17"
rayon = "1.5"
tokio = { version = "1.26.0", features = ["process", "macros"] }
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
warp = "0.3"
libp2p-identity = { version = "=0.2.7", features = ["peerid"] }
juniper = { version = "0.15.11" }
juniper_warp = { version = "0.7.0" }
redux = { workspace = true }
ledger = { workspace = true }
mina-p2p-messages = { workspace = true }
mina-signer = { workspace = true }
bytes = "1.4.0"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
tracing = "0.1.37"
thiserror = "1.0.44"
anyhow = "1.0.70"
nix = { version = "0.26.2", features = ["signal"] }
vrf = { workspace = true }
jsonpath-rust = "0.5.0"

openmina-node-common = { path = "../common" }
node = { path = "../../node", features = ["replay"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
redux = { workspace = true, features=["serializable_callbacks"] }

[features]
default = ["p2p-libp2p"]
p2p-webrtc = ["node/p2p-webrtc"]
p2p-libp2p = ["node/p2p-libp2p"]
