[package]
name = "node-p2p"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = "1.0.147"
strum = "0.24.1"
strum_macros = "0.24.3"
derive_more = "0.99.17"
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "dfbd3bbda8b2681d86ac73065523c658ee31d45d" }
redux = { git = "https://github.com/openmina/redux-rs.git", features = ["serde"] }
libp2p = { git = "https://github.com/openmina/rust-libp2p", branch="webrtc-v0.51.3", default-features = false, features = ["wasm-bindgen", "wasm-ext-webrtc", "serde"] }

mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", features = ["hashing"], rev = "94fd3389acdf6986aa6731b0e64f5cd8b0db5eed" }

shared = { path = "../shared" }
snark = { path = "../snark" }
