[package]
name = "p2p"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = "1.0.147"
strum = "0.24.1"
strum_macros = "0.24.3"
derive_more = "0.99.17"
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "3f29b25" }
redux = { git = "https://github.com/openmina/redux-rs.git", features = ["serde"] }
libp2p = { git = "https://github.com/openmina/rust-libp2p", branch="webrtc", features = ["wasm-bindgen", "wasm-ext-webrtc", "serde"] }

mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", features = ["hashing"], rev = "dd6f46daa4d1ee48044d965a8e955588f23b3f39" }

shared = { path = "../shared" }
snark = { path = "../snark" }
