[package]
name = "shared"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = "1.0.147"
slab = { version = "0.4.7", features = ["serde"] }
tracing = { version = "0.1", features = ["std"] }
redux = { git = "https://github.com/openmina/redux-rs.git", features = ["serde"] }

mina-hasher = { git = "https://github.com/o1-labs/proof-systems" }
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", features = ["hashing"], rev = "212c12400010cbe4694617c133d2f6de0afa48fa" }
