[package]
name = "snark"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "snark-bin"
path = "src/bin/main.rs"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
kimchi = {git = "https://github.com/o1-labs/proof-systems", rev = "bb0bb776ba6ef39750ac92557947a81c2144b63a"}
commitment_dlog = {git = "https://github.com/o1-labs/proof-systems", rev = "bb0bb776ba6ef39750ac92557947a81c2144b63a"}
o1-utils = {git = "https://github.com/o1-labs/proof-systems", rev = "bb0bb776ba6ef39750ac92557947a81c2144b63a"}
mina-hasher = {git = "https://github.com/o1-labs/proof-systems", rev = "bb0bb776ba6ef39750ac92557947a81c2144b63a"}
mina-curves = {git = "https://github.com/o1-labs/proof-systems", rev = "bb0bb776ba6ef39750ac92557947a81c2144b63a"}
mina-signer = {git = "https://github.com/o1-labs/proof-systems", rev = "bb0bb776ba6ef39750ac92557947a81c2144b63a"}
oracle = {git = "https://github.com/o1-labs/proof-systems", rev = "bb0bb776ba6ef39750ac92557947a81c2144b63a"}

strum_macros = "0.24.3"
derive_more = "0.99.17"
serde = { version = "1.0", features = ["rc"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
ark-ff = { version = "0.3", features = [ "parallel", "asm" ] }
ark-ec = { version = "0.3", features = [ "parallel" ] }
ark-poly = { version = "0.3", features = [ "parallel" ] }
once_cell = "1.10"
hex = "0.4"
redux = { git = "https://github.com/name-placeholder/redux-rs.git", features = ["serde"] }
mina-p2p-messages = { git = "https://github.com/name-placeholder/mina-p2p-messages-rs", branch = "main", features = ["hashing"] }
# mina-p2p-messages = { path = "../mina-p2p-messages-rs", features = ["hashing"] }
binprot = { git = "https://github.com/name-placeholder/binprot-rs", rev = "ead5ba916725abf8ab212b89985b47c79d1a006a" }
sha2 = "0.10"
num-bigint = "0.4"

rand = "0.8"
rayon = "1.5"

shared = { path = "../shared" }

[dev-dependencies]

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3.0"
