[package]
name = "snark"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "snark-bin"
path = "src/bin/main.rs"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
mina-hasher = { git = "https://github.com/o1-labs/proof-systems" }
mina-signer = { git = "https://github.com/o1-labs/proof-systems" }
mina-curves = { git = "https://github.com/o1-labs/proof-systems" }
o1-utils = { git = "https://github.com/o1-labs/proof-systems" }
kimchi = { git = "https://github.com/o1-labs/proof-systems" }
poly-commitment = { git = "https://github.com/o1-labs/proof-systems" }
mina-poseidon = { git = "https://github.com/o1-labs/proof-systems" }

strum_macros = "0.24.3"
derive_more = "0.99.17"
serde = { version = "1.0", features = ["rc"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
ark-ff = { version = "0.3", features = [ "parallel", "asm" ] }
ark-ec = { version = "0.3", features = [ "parallel" ] }
ark-poly = { version = "0.3", features = [ "parallel" ] }
once_cell = "1.10"
hex = "0.4"
redux = { git = "https://github.com/openmina/redux-rs.git", features = ["serde"] }
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", branch = "openmina", features = ["hashing"] }
# mina-p2p-messages = { path = "../mina-p2p-messages-rs", features = ["hashing"] }
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "dfbd3bbda8b2681d86ac73065523c658ee31d45d" }
sha2 = "0.10"
num-bigint = "0.4"
bincode = "1.3.3"

rand = "0.8"
rayon = "1.5"

shared = { path = "../shared" }

[dev-dependencies]

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3.0"
