[package]
name = "openmina-node-testing"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "openmina_node_testing"
path = "src/lib.rs"

[[bin]]
name = "openmina-node-testing"
path = "src/main.rs"

[dependencies]
lazy_static = "1.4.0"
serde = "1.0.147"
serde_json = { version = "1.0.82", features = ["unbounded_depth", "arbitrary_precision"] }
anyhow = "1.0.70"
bincode = "1.3.3"
rand = "0.8"
tokio = { version = "1.26.0" }
num_cpus = "1.0"
rayon = "1.5"
axum = "0.6"
tower-http = { version = "0.4.4", features = ["cors"] }
strum = "0.24.1"
strum_macros = "0.24.3"
documented = { version = "0.1", optional = true }
redux = { git = "https://github.com/openmina/redux-rs.git", branch="feat/global-time", features = ["serde"] }
ledger = { workspace = true }
mina-p2p-messages = { workspace = true }
libp2p = { workspace = true, features = ["macros", "serde", "tcp", "dns", "tokio", "yamux", "pnet", "noise", "gossipsub"] }

console = "0.15.5"
clap = { version = "4.3", features = [ "derive", "env" ] }

openmina-core = { path = "../../core" }
node = { path = "../../node" }
openmina-node-invariants = { path = "../../node/invariants" }
openmina-node-native = { path = "../../node/native" }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
temp-dir = "0.1.11"
nix = { version = "0.27.1", features = ["process", "signal"] }
tracing-log = "0.2.0"

[features]
default = ["scenario-generators"]
scenario-generators = ["documented"]
p2p-webrtc = ["openmina-node-native/p2p-webrtc"]
