[package]
name = "openmina-node-testing"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "openmina_node_testing"
path = "src/lib.rs"

[[bin]]
name = "openmina-node-testing"
path = "src/main.rs"

[dependencies]
lazy_static = "1.4.0"
derive_more = "0.99.17"
serde = "1.0.147"
serde_json = { version = "1.0.82", features = ["unbounded_depth", "arbitrary_precision"] }
thiserror = "1.0.37"
anyhow = "1.0.70"
postcard = { version = "1.0.8", features = ["use-std"] }
rand = "0.8"
tokio = { version = "1.26.0" }
num_cpus = "1.0"
rayon = "1.5"
axum = "0.6"
tower-http = { version = "0.4.4", features = ["cors"] }
strum = "0.26"
strum_macros = "0.26"
tracing-log = "0.2.0"
documented = { version = "0.1", optional = true }
redux = { workspace = true }
ledger = { workspace = true }
mina-p2p-messages = { workspace = true }
libp2p = { workspace = true, features = ["macros", "serde", "tcp", "dns", "tokio", "yamux", "pnet", "noise", "gossipsub", "identify", "kad"] }
multiaddr = { version = "0.18.1" }
vrf = { workspace = true }
time = { version = "0.3", features = ["formatting"] }
tracing = { version = "0.1", features = ["std"] }
multihash = "0.18.1"

nix = { version = "0.27.1", features = ["process", "signal"] }
ctrlc = "3.4.2"
temp-dir = "0.1.11"
console = "0.15.5"
clap = { version = "4.3", features = [ "derive", "env" ] }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }

openmina-core = { path = "../../core" }
node = { path = "../../node" }
openmina-node-invariants = { path = "../../node/invariants" }
openmina-node-native = { path = "../../node/native" }
chrono = "0.4.34"
hex = "0.4.3"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
redux = { workspace = true, features=["serializable_callbacks"] }

[features]
default = ["p2p-libp2p", "scenario-generators"]
scenario-generators = ["documented"]
p2p-webrtc = ["openmina-node-native/p2p-webrtc"]
p2p-libp2p = ["openmina-node-native/p2p-libp2p"]
