[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wasm-timer = { git = "https://github.com/fusetim/wasm-timer", branch = "tim-add-missing-methods" }
wasm_thread = { version = "0.2.0", features = ["es_modules"] }
rayon = "1.5"
js-sys = "0.3.59"
web-sys = { version = "0.3.60", features = ["console", "Window", "Storage"] }
cfg-if = "1.0.0"
derive_more = "0.99.17"
serde = "1.0.147"
gloo-utils = "0.1"
serde_with = { version = "2.0.1", features = ["json"] }
serde_json = { version = "1.0.82", features = ["unbounded_depth", "arbitrary_precision"] }
rand = "0.8.0"
smallvec = "1.10.0"
binprot = { git = "https://github.com/name-placeholder/binprot-rs", rev = "ead5ba916725abf8ab212b89985b47c79d1a006a" }
tracing-subscriber = { version = "0.3", features = ["registry"], default-features = false }
libp2p = { git = "https://github.com/name-placeholder/rust-libp2p", branch="webrtc", features = ["wasm-bindgen", "wasm-ext-webrtc", "serde"] }
redux = { git = "https://github.com/name-placeholder/redux-rs.git", features = ["serde"] }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems" }
mina-signer = { git = "https://github.com/o1-labs/proof-systems" }
mina-p2p-messages = { git = "https://github.com/name-placeholder/mina-p2p-messages-rs", branch = "main", features = ["hashing"] }

shared = { path = "../shared" }
lib = { path = "../lib" }
