[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wasm-timer = { git = "https://github.com/fusetim/wasm-timer", branch = "tim-add-missing-methods" }
wasm_thread = { version = "0.2.0", features = ["es_modules"] }
rayon = "1.5"
js-sys = "0.3.59"
web-sys = { version = "0.3.60", features = ["console", "Window", "Storage"] }
cfg-if = "1.0.0"
derive_more = "0.99.17"
serde = "1.0.147"
gloo-utils = "0.1"
serde_with = { version = "2.0.1", features = ["json"] }
serde_json = { version = "1.0.82", features = ["unbounded_depth", "arbitrary_precision"] }
rand = "0.8.0"
smallvec = "1.10.0"
sha2 = "0.10"
hex = "0.4"
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "dfbd3bbda8b2681d86ac73065523c658ee31d45d" }
tracing-subscriber = { version = "0.3", features = ["registry"], default-features = false }
libp2p = { git = "https://github.com/openmina/rust-libp2p", branch="webrtc-v0.51.3", default-features = false, features = ["wasm-bindgen", "wasm-ext-webrtc", "serde"] }
redux = { git = "https://github.com/openmina/redux-rs.git", features = ["serde"] }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems" }
mina-signer = { git = "https://github.com/o1-labs/proof-systems" }
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", features = ["hashing"], rev = "94fd3389acdf6986aa6731b0e64f5cd8b0db5eed" }

shared = { path = "../shared" }
lib = { path = "../lib" }
