[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wasm-timer = { git = "https://github.com/fusetim/wasm-timer", branch = "tim-add-missing-methods" }
wasm_thread = { version = "0.2.0", features = ["es_modules"] }
rayon = "1.5"
js-sys = "0.3.59"
web-sys = { version = "0.3.60", features = ["console", "Window", "Storage"] }
cfg-if = "1.0.0"
derive_more = "0.99.17"
serde = "1.0.147"
gloo-utils = "0.1"
serde_with = { version = "2.0.1", features = ["json"] }
serde_json = { version = "1.0.82", features = ["unbounded_depth", "arbitrary_precision"] }
serde_sexpr = "0.1.0"
rsexp = "0.2.3"
rand = "0.8.0"
smallvec = "1.10.0"
sha2 = "0.10"
hex = "0.4"
convert_case = "0.6.0"
base64 = "0.21.5"
bs58 = { version = "0.5.0", features = ["check"] }
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "3f29b25" }
tracing-subscriber = { version = "0.3", features = ["registry"], default-features = false }
libp2p = { git = "https://github.com/openmina/rust-libp2p", branch="webrtc", features = ["wasm-bindgen", "wasm-ext-webrtc", "serde"] }
redux = { git = "https://github.com/openmina/redux-rs.git", features = ["serde"] }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems" }
mina-signer = { git = "https://github.com/o1-labs/proof-systems" }
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", features = ["hashing"], rev = "dd6f46daa4d1ee48044d965a8e955588f23b3f39" }
ledger = { package = "mina-tree", git = "https://github.com/openmina/ledger", rev = "f70ea4a12100c8acd680ab9a49a990f590261fcd" }

shared = { path = "../shared" }
lib = { path = "../lib" }
